bppackaging/src/objects/Customer_Owned_Unit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plate__c</fullName>
        <label>Plate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submodel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submodel</label>
        <referenceTo>Unit_Model__c</referenceTo>
        <relationshipLabel>Customer Owned Units (Submodel)</relationshipLabel>
        <relationshipName>Customer_Owned_Units1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Make__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Make</label>
        <referenceTo>Unit_Make__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Model</label>
        <referenceTo>Unit_Model__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Owned Unit</label>
    <nameField>
        <displayFormat>COU-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Owned Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>